--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 
 <head>
-
   <!-- basic -->
   <meta charset="utf-8">
   <meta content="IE-edge" http-equiv="X-UA-Compatible">
@@ -16,20 +15,67 @@
   <meta name="author" content="Irresistible Interfaces" />
 
   <!-- favicon -->
-  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <link rel="icon" href="images/favicon.png" type="image/png">
 
-  <!--style----->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    
-    body{
-      font-family:poppins;
-    }
-  </style>
-	
+  <!-- site CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 
 <body>
+
+  <!-- navigation bar -->
+  <nav>
+    <!-- social links and phone number -->
+    <div class="social-call">
+      <!-- social links -->
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+      <!-- phone number -->
+      <div class="phone">
+        <span>Call: +123456789</span>
+      </div>
+    </div>
+
+    <!-- menu bar -->
+    <div class="navigation">
+      <!-- logo -->
+      <a class="logo" href="#"><img src="images/logo.png"></a>
+      <!-- menu icon -->
+      <div class="toggle"></div>
+      <!-- menu -->
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li  class="shop"><a href="#">Shop</a>
+          <!-- lable -->
+          <span class="sale-lable">Sale</span>
+        </li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+
+      <!-- right menu -->
+      <div class="right-menu">
+        <a class="search" href="javascript:void(0);">
+          <i class="fas fa-search"></i>
+        </a>
+        <a class="user" href="javascript:void(0);">
+          <i class="far fa-user"></i>
+        </a>
+        <a href="#">
+          <i class="fas fa-shopping-cart">
+            <span class="num-cart-product">0</span>
+          </i>
+        </a>
+      </div>
+    </div>
+  </nav>
+  
 </body>
 </html>
