--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
   <!-- site CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/style.css" />
+  
+  <!-- jQuery link -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+  <!-- search bar javaScript-->
+  <script src="js/script.js"></script>
 </head>
 
 
 <body>
-
   <!-- navigation bar -->
   <nav>
     <!-- social links and phone number -->
@@ -76,6 +81,18 @@
       </div>
     </div>
   </nav>
-  
+
+  <!-- search bar -->
+  <div class="search-bar">
+    <!-- search input -->
+    <div class="search-input">
+      <input type="text" placeholder="Search For Product" name="search" />
+      <!-- cancel btn -->
+      <a class="search-cancel" href="javascript:void(0);">
+        <i class="fas fa-times"></i>
+      </a>
+    </div>
+  </div>
 </body>
+
 </html>
