Login And Sign-Up Form
Updates to HTML, CSS, and JavaScript to show the login, and Sign-up box when clicking on their icons.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,51 @@
       </a>
     </div>
   </div>
-</body>
 
+  <!-- login and sign-up -->
+  <div class="form">
+    <!-- login -->
+    <div class="login-form">
+      <!-- cancel button -->
+      <a class="form-cancel" href="javascript:void(0);">
+        <i class="fas fa-times"></i>
+      </a>
+      <strong>Log In</strong>
+      <!-- inputs -->
+      <form>
+        <input type="email" name="email" placeholder="Example@gmail.com" required/>
+        <input type="password" name="password" placeholder="Password" required/>
+        <input type="submit" value="Log In"/>
+      </form>
+      <!-- forget and sign-up button -->
+      <div class="form-btns">
+        <a class="forget" href="#">Forget Your Password?</a>
+        <a class="sign-up-btn" href="javascript:void(0);">Create Account</a>
+      </div>
+    </div>
+    <!-- sign-up -->
+    <div class="sign-up-form">
+      <!-- cancel button -->
+      <a class="form-cancel" href="javascript:void(0);">
+        <i class="fas fa-times"></i>
+      </a>
+      <strong>Sign Up</strong>
+      <!-- inputs -->
+      <form>
+        <input type="text" name="fullname" placeholder="Full Name" required/>
+        <input type="email" name="email" placeholder="Example@gmail.com" required/>
+        <input type="password" name="password" placeholder="Password" required/>
+        <input type="submit" value="Sign Up"/>
+      </form>
+      <!-- forget and sign-up button -->
+      <div class="form-btns">
+        <a class="already-account" href="javascript:void(0);">
+          Already Have Account?
+        </a>
+      </div>
+    </div>
+  </div>
+  
+
+</body>
 </html>
