--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
   <!-- jQuery link -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
-  <!-- search bar javaScript-->
+  <!-- search bar javaScript -->
   <script src="js/script.js"></script>
+
+  <!-- light-slider files -->
+  <link rel="stylesheet" href="css/lightslider.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
 </head>
 
 
@@ -137,6 +142,50 @@
       </div>
     </div>
   </div>
+  
+
+  <!-- full slider -->
+  <ul id="adaptive" class="cs-hidden">  
+    <!-- box 1 -->
+    <li class="item-a">
+      <!-- box -->
+      <div class="full-slider-box f-slide-1">
+        <div class="f-slider-text-container">
+          <div class="f-slider-text">
+            <span>Limited Offer</span>
+            <strong>30% Off<br/> With <font>Promo Code</font></strong>
+            <a class="f-slider-btn" href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </li>
+    <!-- box 2 -->
+    <li class="item-b">
+      <!-- box -->
+      <div class="full-slider-box f-slide-2">
+        <div class="f-slider-text-container">
+          <div class="f-slider-text">
+            <span>Limited Offer</span>
+            <strong>30% Off<br/> With <font>Promo Code</font></strong>
+            <a class="f-slider-btn" href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </li>
+    <!-- box-3 -->
+    <li class="item-c">
+      <!-- box -->
+      <div class="full-slider-box f-slide-3">
+        <div class="f-slider-text-container">
+          <div class="f-slider-text">
+            <span>Limited Offer</span>
+            <strong>30% Off<br/> With <font>Promo Code</font></strong>
+            <a class="f-slider-btn" href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+    </li>
+  </ul>
   
 
 </body>
