--- a/index.html
+++ b/index.html
@@ -188,5 +188,44 @@
   </ul>
   
 
+  <!-- featured categories slider -->
+  <ul id="autoWidth" class="container" class="cs-hidden">
+    <!-- box 1 -->
+    <li class="item">
+      <div class="feature-box">
+        <a href="pop-culture.html">
+          <img src="images/featured_1.png">
+        </a>
+      </div>
+      <span>Pop Culture</span>
+    </li>
+    <!-- box 2 -->
+    <li class="item">
+      <div class="feature-box">
+        <a href="cosplay-classics.html">
+          <img src="images/featured_2.png">
+        </a>
+      </div>
+      <span>Cosplay Classics</span>
+    </li>
+    <!-- box 3 -->
+    <li class="item">
+      <div class="feature-box">
+        <a href="accessories.html">
+          <img src="images/featured_3.png">
+        </a>
+      </div>
+      <span>Accessories</span>
+    </li>
+    <!-- box 4 -->
+    <li class="item">
+      <div class="feature-box">
+        <a href="#">
+          <img src="images/featured_4.png">
+        </a>
+      </div>
+      <span>Shop All</span>
+    </li>
+
 </body>
 </html>
