--- a/index.html
+++ b/index.html
@@ -310,6 +310,40 @@
   </section>
   
 
+  <!-- sale -->
+  <section class="sale">
+    <!-- sale box 1 -->
+    <div class="sale-box sale-1">
+      <img src="images/sale-1.png">
+      <a href="#">
+        <div class="sale-text">
+          <strong>Christmas Sale</strong>
+          <span>Up to 60% Off</span>
+        </div>
+      </a>
+    </div>
+    <!-- sale box 2 -->
+    <div class="sale-box sale-1">
+      <img src="images/sale-2.png">
+      <a href="#">
+        <div class="sale-text">
+          <strong>Hello Summer</strong>
+          <span>Up to 25% Off</span>
+        </div>
+      </a>
+    </div>
+    <!-- sale box 3 -->
+    <div class="sale-box sale-1">
+      <img src="images/sale-3.png">
+      <a href="#">
+        <div class="sale-text">
+          <strong>Let's Party Hard</strong>
+          <span>Up to 25% Off</span>
+        </div>
+      </a>
+    </div>
+  </section>
+  
 
 </body>
 </html>
