--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <!-- heading -->
     <div class="arrival-heading">
       <strong>New Arrivals</strong>
-      <p>The Latest Trending Costumes for Pets</p>
+      <p>The latest trending costumes for pets.</p>
     </div>
     <!-- products -->
     <div class="product-container"> 
@@ -344,6 +344,87 @@
     </div>
   </section>
   
+
+  <!-- best sellers section -->
+  <section class="new-arrival">
+    <!-- heading -->
+    <div class="arrival-heading">
+      <strong>Best Sellers</strong>
+      <p>Browse popular picks our customers love.</p>
+    </div>
+    <!-- products -->
+    <div class="product-container"> 
+      <!-- product box 1 -->
+      <div class="product-box">
+        <!-- product image -->
+        <div class="product-img">
+          <!-- add cart -->
+          <a class="add-cart" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <!-- image -->
+          <img src="images/p-1.png">
+        </div>
+        <!-- product details -->
+        <div class="product-details">
+          <a class="p-name" href="#">Sunglasses</a>
+          <span class="p-price">$22.00</span>
+        </div>
+      </div>
+      <!-- product box 2 -->
+      <div class="product-box">
+        <!-- product image -->
+        <div class="product-img">
+          <!-- add cart -->
+          <a class="add-cart" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <!-- image -->
+          <img src="images/p-2.png">
+        </div>
+        <!-- product details -->
+        <div class="product-details">
+          <a class="p-name" href="#">Black Tie</a>
+          <span class="p-price">$22.00</span>
+        </div>
+      </div>
+      <!-- product box 3 -->
+      <div class="product-box">
+        <!-- product image -->
+        <div class="product-img">
+          <!-- add cart -->
+          <a class="add-cart" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <!-- image -->
+          <img src="images/p-3.png">
+        </div>
+        <!-- product details -->
+        <div class="product-details">
+          <a class="p-name" href="#">White Bucket Hat</a>
+          <span class="p-price">$22.00</span>
+        </div>
+      </div>
+      <!-- product box 4 -->
+      <div class="product-box">
+        <!-- product image -->
+        <div class="product-img">
+          <!-- add cart -->
+          <a class="add-cart" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <!-- image -->
+          <img src="images/p-4.png">
+        </div>
+        <!-- product details -->
+        <div class="product-details">
+          <a class="p-name" href="#">Clown Wig</a>
+          <span class="p-price">$22.00</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
