--- a/index.html
+++ b/index.html
@@ -426,5 +426,17 @@
   </section>
 
 
+  <!--banner-->
+  <div class="banner-box f-slide-3">
+    <div class="banner-text-container">
+      <div class="banner-text">
+        <span>Limited Offer</span>
+        <strong>30% Off<br/> With <font>Promo Code</font></strong>
+        <a class="banner-btn" href="#">Shop Now</a>
+      </div>
+    </div>  
+  </div> 
+  
+
 </body>
 </html>
