--- a/index.html
+++ b/index.html
@@ -438,5 +438,44 @@
   </div> 
   
 
+  <!-- services -->
+  <section class="services">
+    <!-- services box -->
+    <div class="services-box">
+      <i class="fas fa-shipping-fast"></i>
+      <span>Free Shipping</span>
+      <p>Free Shipping in Australia</p>
+    </div>
+    <!-- services box -->
+    <div class="services-box">
+      <i class="fas fa-headphones-alt"></i>
+      <span>Support 24/7</span>
+      <p>We're open 24 hours a day</p>
+    </div>
+    <!-- services-box -->
+    <div class="services-box">
+      <i class="fas fa-sync"></i>
+      <span>100% Money Back</span>
+      <p>You have 30 days to Return</p>
+    </div>
+  </section>
+
+
+  <!-- footer -->
+  <footer>
+    <!--copyright-------------->
+    <span class="copyright">
+      Copyright 2025 - website by <a href="irresistibleinterfaces.com">Irresistible Interfaces</a>
+    </span>
+    <!--subcribe---------------->
+    <div class="subscribe">
+      <form>
+        <input type="email" placeholder="Example@gmail.com" required/>
+        <input type="submit" value="Subscribe">
+      </form>
+    </div>
+  </footer>
+  
+
 </body>
 </html>
